fix url loading for fonts, breadcrumb spacing and menu change

--- a/web/themes/custom/yale_infosec/components/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/custom/yale_infosec/components/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
@@ -8,6 +8,7 @@ $breadcrumb-font-size: 1.3rem;
   @include list-reset;
 
   line-height: 1;
+  margin-bottom: 0.3rem;
 }
 
 .breadcrumb__item,
