--- a/web/themes/custom/yale_infosec/components/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/web/themes/custom/yale_infosec/components/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -37,10 +37,10 @@ $main-menu-medium: $medium;
 
     // Drupal admin menu
     .toolbar-vertical & {
-      top: 92px;
+      top: 102px;
 
       @include medium {
-        top: 114px;
+        top: 133px;
       }
     }
 
